--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,14 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.vihaan.whatsappclone.ui.homescreen.MainActivity">
+    tools:context="com.adampc.chatanon.ui.homescreen.MainActivity">
 
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_action_search"
         android:orderInCategory="100"
-        app:showAsAction="always"
-        android:title="Call" />
+        app:showAsAction="ifRoom"
+        android:title="@string/search_chat" />
 
     <item
         android:id="@+id/action_logout"
