--- a/app/src/main/res/menu/menu_chat.xml
+++ b/app/src/main/res/menu/menu_chat.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.vihaan.whatsappclone.ui.homescreen.MainActivity">
+    tools:context="com.adampc.chatanon.ui.homescreen.MainActivity">
 
     <item
         android:id="@+id/ic_videocall"
